edit the services cards

--- a/index.html
+++ b/index.html
@@ -253,8 +253,10 @@
             </p>
           </div>
           <div class="row mt-5">
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"><i class="fa-regular fa-envelope"></i></span>
                 <h2 class="text-uppercase">Web Design</h2>
                 <p>
@@ -264,8 +266,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"
                   ><i class="fa-regular fa-rectangle-list"></i
                 ></span>
@@ -277,8 +281,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"
                   ><i class="fa-regular fa-chart-bar"></i
                 ></span>
@@ -290,8 +296,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"
                   ><i class="fa-regular fa-object-ungroup"></i
                 ></span>
@@ -303,8 +311,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"><i class="fa-regular fa-eye"></i></span>
                 <h2 class="text-uppercase">Graphic Design</h2>
                 <p>
@@ -314,8 +324,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-4 mb-4">
-              <div class="card rounded p-4 text-center shadow">
+            <div class="col-md-4 mb-4 d-flex">
+              <div
+                class="card rounded p-4 text-center shadow d-flex flex-column"
+              >
                 <span class="mb-2"
                   ><i class="fa-regular fa-calendar-xmark"></i
                 ></span>
